PROJECT(gsw C)
CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR})

FIND_PACKAGE(PkgConfig REQUIRED)
PKG_CHECK_MODULES(GTK3 REQUIRED gtk+-3.0)
INCLUDE_DIRECTORIES(${GTK3_INCLUDE_DIRS})
LINK_DIRECTORIES(${GTK3_LIBRARY_DIRS})
FILE(COPY glade/window_main.glade DESTINATION ${CMAKE_BINARY_DIR})
ADD_DEFINITIONS(${GTK3_CFLAGS_OTHER})

ADD_EXECUTABLE(gsw src/main.c)

TARGET_LINK_LIBRARIES(gsw ${GTK3_LIBRARIES})